force-app/main/default/objects/AcctAnnualPerformance__c/AcctAnnualPerformance__c.object-meta.xml
<CustomObject>
    <description>the data is integrated from CRMDB</description>
    <label>Account Annual Performance</label>
    <nameField>
        <displayFormat>AN-{YYYY}{MM}-{0000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Annual Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>