force-app/main/default/objects/AcctAnnualPerformance__c/fields/AL_Fee__c.field-meta.xml
<CustomField>
    <fullName>AL_Fee__c</fullName>
    <label>AL Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>