force-app/main/default/objects/AcctAnnualPerformance__c/fields/AVG_CASA__c.field-meta.xml
<CustomField>
    <fullName>AVG_CASA__c</fullName>
    <label>Average CASA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>