force-app/main/default/objects/AcctAnnualPerformance__c/fields/BA_FEE__c.field-meta.xml
<CustomField>
    <fullName>BA_FEE__c</fullName>
    <label>BA_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>