force-app/main/default/objects/AcctAnnualPerformance__c/fields/CREDIT_FEE__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_FEE__c</fullName>
    <label>CREDIT_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>