force-app/main/default/objects/AcctAnnualPerformance__c/fields/DERIVATIVES_FEE__c.field-meta.xml
<CustomField>
    <fullName>DERIVATIVES_FEE__c</fullName>
    <label>DERIVATIVES_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>