force-app/main/default/objects/AcctAnnualPerformance__c/fields/DIRECT_CM_FEE__c.field-meta.xml
<CustomField>
    <fullName>DIRECT_CM_FEE__c</fullName>
    <label>DIRECT_CM_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>