force-app/main/default/objects/AcctAnnualPerformance__c/fields/END_CASA__c.field-meta.xml
<CustomField>
    <fullName>END_CASA__c</fullName>
    <label>Ending CASA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>