force-app/main/default/objects/AcctAnnualPerformance__c/fields/ENG_LOAN_OUT__c.field-meta.xml
<CustomField>
    <fullName>ENG_LOAN_OUT__c</fullName>
    <label>Ending loan outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>