force-app/main/default/objects/AcctAnnualPerformance__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>Key จาก CRM DB
TMB_CUS_ID-YEAR-MONTH</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>