force-app/main/default/objects/AcctAnnualPerformance__c/fields/FLEET_FEE__c.field-meta.xml
<CustomField>
    <fullName>FLEET_FEE__c</fullName>
    <label>FLEET_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>