force-app/main/default/objects/AcctAnnualPerformance__c/fields/FRONT_END_FEE__c.field-meta.xml
<CustomField>
    <fullName>FRONT_END_FEE__c</fullName>
    <label>FRONT_END_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>