force-app/main/default/objects/AcctAnnualPerformance__c/fields/FX_VOLUME__c.field-meta.xml
<CustomField>
    <fullName>FX_VOLUME__c</fullName>
    <label>FX volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>