force-app/main/default/objects/AcctAnnualPerformance__c/fields/IB_FEE__c.field-meta.xml
<CustomField>
    <fullName>IB_FEE__c</fullName>
    <label>IB_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>