force-app/main/default/objects/AcctAnnualPerformance__c/fields/MF_Fee__c.field-meta.xml
<CustomField>
    <fullName>MF_Fee__c</fullName>
    <label>MF Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>