force-app/main/default/objects/AcctAnnualPerformance__c/fields/MonthYear__c.field-meta.xml
<CustomField>
    <fullName>MonthYear__c</fullName>
    <description>เอาไว้ช่วย Query</description>
    <formula>&apos;M&apos;+TEXT(Month__c)+&apos;Y&apos;+TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthYear</label>
    <type>Text</type>
</CustomField>