force-app/main/default/objects/AcctAnnualPerformance__c/fields/NIId__c.field-meta.xml
<CustomField>
    <fullName>NIId__c</fullName>
    <label>NIId</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>