force-app/main/default/objects/AcctAnnualPerformance__c/fields/OTHER_CM_FEE__c.field-meta.xml
<CustomField>
    <fullName>OTHER_CM_FEE__c</fullName>
    <label>OTHER_CM_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>