force-app/main/default/objects/AcctAnnualPerformance__c/fields/Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain__c</fullName>
    <label>Supply Chain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>