force-app/main/default/objects/AcctAnnualPerformance__c/fields/TF_FEE__c.field-meta.xml
<CustomField>
    <fullName>TF_FEE__c</fullName>
    <label>TF_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>