force-app/main/default/objects/AcctAnnualPerformance__c/fields/TF_VOLUME__c.field-meta.xml
<CustomField>
    <fullName>TF_VOLUME__c</fullName>
    <label>TF Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>