force-app/main/default/objects/AcctAnnualPerformance__c/fields/TMB_CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_CUST_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB_CUST_ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>