force-app/main/default/objects/AcctAnnualPerformance__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>