force-app/main/default/objects/AcctAnnualPerformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Date__c</columns>
    <columns>TMB_CUST_ID__c</columns>
    <columns>Month__c</columns>
    <columns>MonthYear__c</columns>
    <columns>NIIc__c</columns>
    <columns>NIId__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>